# seokar

./: .gitignore  LICENSE  README.md  Readme-fa.md  SECURITY.md  Tree.md  pyproject.toml  requirements-dev.txt  requirements-extra.txt  requirements.txt  setup.py  test_temp_models.py
.github/: dependabot.yml
.github/workflows/: apisec-scan.yml  bandit.yml  black-duck-security-scan-ci.yml  checkmarx.yml  codacy.yml  codeql.yml  defender-for-devops.yml  devskim.yml  docs.yml  ossar.yml
docs/api/: core.md
docs/guides/: cli.md  plugins.md
examples/: advanced_analysis.py  cli_usage.sh
seokar/: __init__.py  analyzer.py  cli.py  constants.py  errors.py  exceptions.py  helpers.py  logger.py  models.py  seokar.py
seokar/constants/: __init__.py  content.py  core.py  local.py  schema.py  security.py  technical.py
seokar/core/: models.py
seokar/interfaces/: __init__.py  analysis.py  exporters.py
seokar/stopwords/: general.txt  numbers.txt
seokar/tests/: test_analyzer.py  test_models.py
seokar/tests/test_constants/: test_content.py  test_core.py  test_local.py  test_schema.py  test_security.py  test_technical.py
seokar/tests/test_utils/: test_helpers.py  test_network.py  test_text_analysis.py
seokar/utils/: __init__.py  helpers.py  network.py  text_analysis.py
tests/: __init__.py  conftest.py  test_analyzer.py  test_seokar.py
tests/unit/: test_models.py
