[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
backend-path = ["."]

[project]
name = "seokar"
version = "0.1.0"
authors = [
    { name = "Sajjad Akbari", email = "sajjadakbari.ir@email.com" },
]
description = "A Python library for comprehensive on-page SEO analysis of HTML content."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
keywords = ["seo", "seo analysis", "html parser", "meta tags", "opengraph", "twitter card", "on-page seo", "website analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Text Processing :: Markup :: HTML",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "beautifulsoup4>=4.9.3", 
]

[project.urls]
Homepage = "https://github.com/sajjadeakbari/seokar"
"Bug Tracker" = "https://github.com/sajjadeakbari/seokar/issues"
Documentation = "https://github.com/sajjadeakbari/seokar#readme" 

[tool.setuptools.packages.find]
where = ["."]
include = ["seokar*"]
exclude = ["tests*"]

[tool.black]
line-length = 100 

[tool.flake8]
max-line-length = 100 
extend-ignore = "E203" # Whitespace before ':' (conflicts with Black)

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    # "pytest-cov", # برای گزارش پوشش تست (اختیاری)
]
