[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seokar"
version = "2.0.0"
description = "Next Generation SEO Toolkit for Python"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Sajjad Akbari", email = "sajjadakbari.ir@gmail.com"},
]
license = {text = "MIT"}
keywords = ["seo", "marketing", "web", "optimization", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "httpx>=0.24.0",
    "beautifulsoup4>=4.12.0",
    "typer>=0.9.0",
    "pydantic>=2.0",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "black>=24.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.5.0",
    "twine>=5.0.0",
    "types-requests>=2.31.0",
]
ahrefs = ["ahrefs-api>=2.0.0"]
semrush = ["semrush-api>=1.5.0"]

[project.urls]
Homepage = "https://sajjadakbari.ir"
Repository = "https://github.com/sajjadeakbari/seokar"
Documentation = "https://sajjadeakbari.github.io/seokar"
Changelog = "https://github.com/sajjadeakbari/seokar/blob/main/CHANGELOG.md"

[project.scripts]
seokar = "seokar.cli.main:app"

[tool.setuptools.packages.find]
where = ["seokar"]

[tool.ruff]
line-length = 100
select = [
    "E", "F", "W", "I", 
    "UP", "PL", "RUF",
    "ANN", "BLE", "COM",
    "DJ", "DTZ", "EM",
    "ERA", "EXE", "FBT",
    "ICN", "INP", "ISC",
    "N", "PD", "PGH",
    "PIE", "PT", "PTH",
    "PYI", "RET", "SIM",
    "SLF", "TCH", "TID",
    "TRY", "YTT",
]
ignore = ["ANN101", "S101"]
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "--cov=seokar --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
python_files = "test_*.py"
